gsql-ref/3.10/querying/func/type-conversion-functions.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions)[Next](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
  *     * [Overview](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [What sets GSQL apart](https://docs.tigergraph.com/gsql-ref/3.10/intro/set-gsql-apart)
  *     * Tutorials
      * [GSQL 101](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/gsql-101/)
        * [Define a Schema](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/gsql-101/define-a-schema)
        * [Load Data](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/gsql-101/load-data-gsql-101)
        * [Run Built-in Queries](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/gsql-101/built-in-select-queries)
        * [Parameterized Queries](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/gsql-101/parameterized-gsql-query)
        * [Review](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/gsql-101/review)
      * [Pattern Matching Tutorial](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/pattern-matching/)
        * [Prepare your Environment](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/pattern-matching/prepare-environment)
        * [One-hop patterns](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/pattern-matching/one-hop-patterns)
        * [Repeating a 1-Hop Pattern](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/pattern-matching/repeating-a-pattern)
        * [Multiple Hop Patterns and Accumulation](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/pattern-matching/multiple-hop-and-accumulation)
        * [Example - A Recommender](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/pattern-matching/example)
        * [Advanced Features](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/pattern-matching/adv/)
          * [Per Clause (Beta)](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/pattern-matching/adv/per-clause)
          * [Conjunctive Pattern Matching (Beta)](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/pattern-matching/adv/conjunctive-pattern-matching)
          * [Data Modification](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/pattern-matching/adv/dml)
        * [Summary](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/pattern-matching/summary)
      * [Accumulators Tutorial](https://docs.tigergraph.com/gsql-ref/3.10/tutorials/accumulators-tutorial)
  *     * [System & Language Basics](https://docs.tigergraph.com/gsql-ref/3.10/basics/system-and-language-basics)
  *     * [Attribute Data Types](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/attribute-data-types)
    * [Schema Definition](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/)
      * [Define a Graph Schema](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/defining-a-graph-schema)
      * [Modify a Graph Schema](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/modifying-a-graph-schema)
    * [Loading Jobs](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/loading-jobs)
      * [Create a Loading Job](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/creating-a-loading-job)
        * [Functions](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/)
          * [Token Functions](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/)
            * [flatten()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/flatten)
            * [flatten_json_array()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/flatten_json_array)
            * [gsql_concat()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_concat)
            * [gsql_current_time_epoch()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_current_time_epoch)
            * [gsql_day()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_day)
            * [gsql_day_epoch()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_day_epoch)
            * [gsql_find()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_find)
            * [gsql_length()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_length)
            * [gsql_lower()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_lower)
            * [gsql_ltrim()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_ltrim)
            * [gsql_month()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_month)
            * [gsql_month_epoch()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_month_epoch)
            * [gsql_regex_match()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_regex_match)
            * [gsql_regex_replace()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_regex_replace)
            * [gsql_reverse()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_reverse)
            * [gsql_rtrim()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_rtrim)
            * [gsql_substring()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_substring)
            * [gsql_to_bool()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_to_bool)
            * [gsql_to_int()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_to_int)
            * [gsql_to_uint()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_to_uint)
            * [gsql_trim()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_trim)
            * [gsql_ts_to_epoch_seconds()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_ts_to_epoch)
            * [gsql_upper()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_upper)
            * [gsql_uuid_v4()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_uuid_v4)
            * [gsql_year()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_year)
            * [gsql_year_epoch()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/gsql_year_epoch)
            * [split()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token/split)
          * [Token Functions in WHERE Clause](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token_where/)
            * [concat()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token_where/concat)
            * [gsql_is_false()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token_where/gsql_is_false)
            * [gsql_is_not_empty()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token_where/gsql_is_not_empty)
            * [gsql_is_true()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token_where/gsql_is_true)
            * [gsql_token_equal()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token_where/gsql_token_equal)
            * [gsql_token_ignore_case_equal()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token_where/gsql_token_ignore_case_equal)
            * [to_float()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token_where/to_float)
            * [to_int()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token_where/to_int)
            * [token_len()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/token_where/token_len)
          * [Reducer functions](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/reducer/)
            * [add()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/reducer/add)
            * [and()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/reducer/and)
            * [ignore_if_exists()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/reducer/ignore_if_exists)
            * [max()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/reducer/max)
            * [min()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/reducer/min)
            * [or()](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/functions/reducer/or)
        * [Add a User-defined Token Function](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/add-token-function)
      * [Run a Loading Job](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/running-a-loading-job)
      * [Manage Loading Jobs](https://docs.tigergraph.com/gsql-ref/3.10/ddl-and-loading/managing-loading-job)
  *     * [Querying](https://docs.tigergraph.com/gsql-ref/3.10/querying/)
      * [Query Language Syntax Versions](https://docs.tigergraph.com/gsql-ref/3.10/querying/syntax-versions)
      * [Queries](https://docs.tigergraph.com/gsql-ref/3.10/querying/query-operations)
      * [Query Optimizer (Preview Feature)](https://docs.tigergraph.com/gsql-ref/3.10/querying/query-optimizer/)
        * [Enabling Cost-Based Optimization (Preview Feature)](https://docs.tigergraph.com/gsql-ref/3.10/querying/query-optimizer/enable-cost-optimizer)
        * [Statistics REST APIs (Preview Feature)](https://docs.tigergraph.com/gsql-ref/3.10/querying/query-optimizer/stats-api)
      * [Distributed Query Mode](https://docs.tigergraph.com/gsql-ref/3.10/querying/distributed-query-mode)
      * [Data Types](https://docs.tigergraph.com/gsql-ref/3.10/querying/data-types)
      * [Accumulators](https://docs.tigergraph.com/gsql-ref/3.10/querying/accumulators)
      * [Operators and Expressions](https://docs.tigergraph.com/gsql-ref/3.10/querying/operators-and-expressions)
      * [Functions](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/)
        * [Aggregation Functions](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/aggregation-functions)
        * [Datetime Functions](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/datetime-functions)
        * [Edge Methods](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/edge-methods)
        * [JSON Object Methods](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/json-object-methods)
        * [JSON Array Methods](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/jsonarray-methods)
        * [Mathematical Functions](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/mathematical-functions)
        * [Miscellaneous Functions](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/miscellaneous-functions)
        * [Query User-Defined Functions](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/query-user-defined-functions)
        * [String Functions](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/string-functions)
        * [Type Conversion Functions](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions)
        * [Vertex Functions](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/vertex-methods)
        * [Context Functions](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/context-functions)
      * [Declaration and Assignment Statements](https://docs.tigergraph.com/gsql-ref/3.10/querying/declaration-and-assignment-statements)
      * [SELECT Statement](https://docs.tigergraph.com/gsql-ref/3.10/querying/select-statement/)
        * [SELECT Statement (Syntax V1)](https://docs.tigergraph.com/gsql-ref/3.10/querying/select-statement/select-statement-v1)
        * [SQL-like SELECT statement](https://docs.tigergraph.com/gsql-ref/3.10/querying/select-statement/sql-like-select-statement)
      * [Control Flow Statements](https://docs.tigergraph.com/gsql-ref/3.10/querying/control-flow-statements)
      * [Data Modification Statements](https://docs.tigergraph.com/gsql-ref/3.10/querying/data-modification-statements)
      * [Output Statements and FILE Objects](https://docs.tigergraph.com/gsql-ref/3.10/querying/output-statements-and-file-objects)
      * [Exception Statements](https://docs.tigergraph.com/gsql-ref/3.10/querying/exception-statements)
      * [Comments](https://docs.tigergraph.com/gsql-ref/3.10/querying/comments)
  *     * openCypher
      * [openCypher in GSQL](https://docs.tigergraph.com/gsql-ref/3.10/openCypher-in-gsql/openCypher-in-gsql)
      * [Writing and Running openCypher in GSQL Shell](https://docs.tigergraph.com/gsql-ref/3.10/openCypher-in-gsql/openCypher-in-gsql-web-shell)
      * [openCypher Pattern Support in GSQL](https://docs.tigergraph.com/gsql-ref/3.10/openCypher-in-gsql/openCypher-gsql-from-clause-extension)
  *     * Appendix
      * [GSQL Style Guide](https://docs.tigergraph.com/gsql-ref/3.10/appendix/gsql-style-guide)
      * [DDL Keywords & Reserved Words](https://docs.tigergraph.com/gsql-ref/3.10/appendix/keywords-and-reserved-words)
      * [Query Language Keywords & Reserved Words](https://docs.tigergraph.com/gsql-ref/3.10/appendix/query-language-reserved-words)
      * [Interpreted GSQL Limitations](https://docs.tigergraph.com/gsql-ref/3.10/appendix/interpreted-gsql-limitations)
      * [GSQL Start-to-End Process and Data Flow](https://docs.tigergraph.com/gsql-ref/3.10/appendix/gsql-start-to-end-process)
      * [Example Graphs](https://docs.tigergraph.com/gsql-ref/3.10/appendix/example-graphs)
      * [Common Errors and Problems](https://docs.tigergraph.com/gsql-ref/3.10/appendix/common-errors-and-problems)
      * [GSQL Cheat Sheets](https://docs.tigergraph.com/gsql-ref/3.10/appendix/cheat-sheets)
      * [Documentation Notations](https://docs.tigergraph.com/gsql-ref/3.10/appendix/notations)
    * [Legacy Version Documentation](https://docs.tigergraph.com/gsql-ref/3.10/appendix/legacy-tg-versions)


GSQL Language Reference 3.10
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [GSQL Language Reference 3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
  * [Querying](https://docs.tigergraph.com/gsql-ref/3.10/querying/)
  * [Functions](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/)
  * [Type Conversion Functions](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions)


[Edit this Page](https://github.com/tigergraph/gsql-docs/edit/3.10/modules/querying/pages/func/type-conversion-functions.adoc)
### Contents
  * [parse_json_array()](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_parse_json_array)
  * [parse_json_object()](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_parse_json_object)
  * [str_to_int ()](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_str_to_int)
  * [to_datetime ()](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_to_datetime)
  * [to_string()](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_to_string)
  * [toBoolean()](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_toboolean)
  * [toFloat()](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_tofloat)
  * [toInteger()](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_tointeger)


# Type Conversion Functions
### Contents
  * [parse_json_array()](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_parse_json_array)
  * [parse_json_object()](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_parse_json_object)
  * [str_to_int ()](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_str_to_int)
  * [to_datetime ()](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_to_datetime)
  * [to_string()](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_to_string)
  * [toBoolean()](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_toboolean)
  * [toFloat()](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_tofloat)
  * [toInteger()](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_tointeger)


The functions on this page are used to convert data from one type to another in the GSQL query language.
## [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_parse_json_array)`parse_json_array()`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_syntax)Syntax
`parse_json_array( str )`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_description)Description
Converts a string into a JSON array. The string must be properly formatted, or the function will generate a run-time error. To be properly formatted, besides having the proper nesting and matching of curly braces `{ }` and brackets `[ ]`, each value field must be one of the following:
  * a string
  * a number
  * a boolean
  * a JSONOBJECT - Each key of a key-value pair must be a string in double quotes.
  * a JSON array


### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_return_type)Return type
`JSONARRAY`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_parameters)Parameters
Parameter | Description | Data type  
---|---|---  
`str` | The string to be converted into a JSON array. | `STRING`  
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_example)Example
```
parse_json_array("[123]") -> [123]
javascript![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

## [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_parse_json_object)`parse_json_object()`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_syntax_2)Syntax
`parse_json_object( str )`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_description_2)Description
Converts a string into a JSON object. The string must be properly formatted, or the function will generate a run-time error. To be properly formatted, besides having the proper nesting and matching of curly braces `{ }` and brackets `[ ]`, each value field must be one of the following:
  * a string
  * a number
  * a boolean
  * a JSONOBJECT - Each key of a key-value pair must be a string in double quotes, and the quotes need to be escaped with a backlash-escape `\`. However, if you are supplying the string in GraphStudio as a parameter, you do not need the backlash-escape since string values are not enclosed in double quotes.
  * a JSON array


### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_return_type_2)Return type
`JSONOBJECT`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_parameters_2)Parameters
Parameter | Description | Data type  
---|---|---  
`str` | The string to be converted into a JSON object. | `STRING`  
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_example_2)Example
```
parse_json_object("{\"abc\":123}") -> {"abc": 123}
javascript![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

## [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_str_to_int)`str_to_int ()`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_syntax_3)Syntax
`str_to_int (str)`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_description_3)Description
Converts a string to an integer.
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_return_type_3)Return type
`INT`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_parameters_3)Parameters
Parameter | Description | Data type  
---|---|---  
`str` | The string to be converted to an integer | `STRING`  
## [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_to_datetime)`to_datetime ()`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_syntax_4)Syntax
`to_datetime ( str )`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_description_4)Description
Converts a string value into a `DATETIME` value.
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_return_type_4)Return type
`DATETIME`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_parameters_4)Parameters
Parameter | Description | Data type  
---|---|---  
`str` | A string value | `STRING`  
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_example_3)Example
```
to_datetime("2020-01-02 01:02:03") -> 2020-01-02 01:02:03
javascript![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

## [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_to_string)`to_string()`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_syntax_5)Syntax
`to_string(num)`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_description_5)Description
Converts a number to a string using the C++ printf function with the `g` specifier, which means it always produces the shortest output.
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_return_type_5)Return type
`STRING`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_parameters_5)Parameters
Parameter | Description | Data type  
---|---|---  
`num` | The number to turn into a string | Number  
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_example_4)Example
```
to_string(1000.1) -> "1000.1"
to_string(0.0000000001) -> "1E-10"
to_string(12300000000) -> "12300000000" // Using an `INT` or `UINT` value returns the full number as a string without scientific notation
to_string(12300000000.0) -> "1.23e+10" // Using a `DOUBLE` value returns scientific notation for large numbers
to_string(12300000000.0) -> "1.23e+10" // Using a `FLOAT` value also returns scientific notation for large numbers
```

## [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_toboolean)`toBoolean()`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_syntax_6)Syntax
`toBoolean(input)`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_description_6)Description
This function converts a string into a boolean value (`true` or `false`).
  * If the input is already a boolean, it returns the same value.
  * If the input is a string equivalent of true or false (case-insensitive), it returns the corresponding boolean value.
  * For other string inputs or parsing failures, it returns `NULL`.


### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_return_type_6)Return type
`BOOLEAN`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_parameters_6)Parameters
Parameter | Description | Data type  
---|---|---  
`input` | An expression that returns a boolean or string | String/Boolean  
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_example_5)Example
```
toBoolean("true") -> true
toBoolean("false") -> false
toBoolean("invalid") -> null
```

## [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_tofloat)`toFloat()`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_syntax_7)Syntax
`toFloat(input)`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_description_7)Description
Converts an integer or string to a floating-point number.
  * If the input is already a floating-point number, the function will return it unchanged.
  * If the input is a valid number in string format (e.g., "14.5"), it converts the string to a float (e.g., 14.5).
  * **Scientific notation** is supported. For example, "1.45e-06" is applicable.


### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_return_type_7)Return type
`FLOAT`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_parameters_7)Parameters
Parameter | Description | Data type  
---|---|---  
`input` | An expression that returns a numeric or string | String/Number  
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_example_6)Example
```
toFloat(14) -> 14.0
toFloat("-3.5") -> -3.5
toFloat("1.45E-6") -> 1.45e-06
toFloat("invalid") -> NULL
```

## [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_tointeger)`toInteger()`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_syntax_8)Syntax
`toInteger(input)`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_description_8)Description
Converts a floating-point number or string to an integer.
  * If the input is already an integer, it is returned unchanged.
  * If the input is a valid number in string format (e.g., "42"), it converts the string to an integer (e.g., 42).
  * If the input is a floating-point number, it truncates the decimal part (e.g., 14.7 becomes 14).


### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_return_type_8)Return type
`INTEGER`
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_parameters_8)Parameters
Parameter | Description | Data type  
---|---|---  
`input` | An expression that returns a numeric or string | String/Number  
### [](https://docs.tigergraph.com/gsql-ref/3.10/querying/func/type-conversion-functions#_example_7)Example
```
toInteger(14.7) -> 14
toInteger("-10") -> -10
toInteger("five") -> NULL
```

3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


